# Window-optimisation

./: README.md
instances/: groupeFaisable-02_fenetres.csv  groupeFaisable-02_voletsDroits.csv  groupeFaisable-02_voletsGauches.csv  groupeOpt-02_fenetres.csv  groupeOpt-02_voletsDroits.csv  groupeOpt-02_voletsGauches.csv
nosSolutions/: grandeOpt_solutionInitiale.csv
src/: CMakeLists.txt  SharedElements.cpp  SharedElements.h  costFunctions.cpp  costFunctions.h  heuristique.cpp  heuristique.h  localSearch.cpp  localSearch.h  main.cpp  moveMaster.cpp  moveMaster.h  shotgun.cpp  shotgun.h
